--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="angelo.css"/>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
       <header class="cabecalho">
