--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
       <header class="cabecalho">
         <center><h1>Dando uma bizoiada</h1></center>
-      </header>
+      </header>  
   </body>
+  
+  <style>
+  body {
+    padding: 0;
+    margin: 0;
+}
+
+h1, h2 {
+    font-family: monospace;
+}
+
+.cabecalho {
+    background-color: grey;
+    margin: 0;
+    padding: 50px;
+}
+
+</style>
+  
 </html>
+
