--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <header class="cabecalho">
-        <center><h1>Dando uma bizoiada</h1></center>
+        <center><h1>Dando uma bizoiaggda</h1></center>
       </header>
     <a href="progresso.html"><h1>poxa</h1></a>
   </body>
