--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <header class="cabecalho">
-        <center><h1>Dando uma bgsdgizoiada</h1></center>
+        <center><h1>Dando uma bizoiada</h1></center>
       </header>
   </body>
 </html>
